--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                 grid-template-rows: auto auto "footer"; 
             }
             .header, .content, .footer{
-                border: 1px solid black;
                 z-index: 2;
             }
             .header {
@@ -73,7 +72,7 @@
                 grid-row: auto;
                 border: 1px solid black;
                 display: block;
-                position: sticky;
+                position: fixed;
                 top: 0;
                 z-index: 1;
             }
@@ -115,6 +114,7 @@
                 background-color: white;
                 grid-row: 3;
                 grid-column: 1 / span 2;
+                padding: 2% 0;
             }
         </style>
     </head>
@@ -184,7 +184,8 @@
     </div>
     <div class="footer">
         <p style="text-align: center;">
-            Jo-Ri Designs. Made with love. © 2023
+            Jo-Ri Designs. Made with love. © 2023 <br/>
+            <a href="contacts.html" style="text-decoration: none; color: black;">Contact Us!</a>
         </p>
     </div>
 </body>
