--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         color: black;
                         float: left;
                         display: block;
-                        padding: 100% 40%;
+                        padding: 100px 40%;
                         transition: 0.3s;
                     }
                     a{
