--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 display: block;
                 position: fixed;
                 top: 0;
-                z-index: 1;
+                z-index: 2;
             }
                 .menu{
                     margin: 0 -30%;
@@ -113,7 +113,7 @@
              .footer {
                 background-color: white;
                 grid-row: 3;
-                grid-column: 1 / span 2;
+                grid-column: 2;
                 padding: 2% 0;
             }
         </style>
