--- a/map.html
+++ b/map.html
@@ -6,12 +6,7 @@
             *{margin: 0;}
             body{
                 display: grid;
-                grid-template: "content"
-                               "footer";
-                background-image: url('images/sticker\ bg2.png');
-                background-repeat: no-repeat;
-                background-size: 120% 290%;
-                background-attachment: fixed;
+                grid-template: "content";
                 font-family: Arial;
             }
             /* #header, #content, #footer{
@@ -35,10 +30,13 @@
             /* #content{
                 padding: 20% 0;
             } */
-            #footer{
-                padding: 2% 0;
-                background-color: white;
-            }
+			
+            footer {
+				background-color: #333;
+				color: #fff;
+				text-align: center;
+				padding: 12px;
+			}
         </style>
         <!-- <script src="javascript stuff/image-map-resizer-master/js/imageMapResizer.min.js"></script> -->
     </head>
@@ -57,9 +55,10 @@
             </ul>
         </div> -->
     <div id="content">
-        <h1 style="position: absolute; top: 5%; right: 40%; font-size: 90px;">The Map</h1>
+        <h1 style="position: absolute; top: 8%; left: 5.7%; font-size: 90px; color: #e60000;text-shadow: 2px 2px 4px #000000; ">Map</h1>
+		<p style="position: absolute; top: 23%; left: 6.2%; font-size: 20px; ">blah blah blah</p>
         <center>
-        <img src="images/betamap2.png" usemap="#image_map">
+        <img src="images/map1stdraft.jpg" usemap="#image_map">
         <map name="image_map">
         <area alt="" title="Under Construction" href="" coords="1433,399,1511,454" shape="rect">
         <area alt="" title="Back to Lobby" href="index.html" coords="1148,601,1213,687" shape="rect">
@@ -69,15 +68,10 @@
         <area alt="" title="More Info" href="about.html" coords="1438,513,1501,617" shape="rect">
         </map>
         </center>
-        
-        <p style="position: absolute; top: 100%; left: 30%; font-size: 50px;">Click the red dots or the (i) circle to navigate</p>
-    </div>
-    <div id="footer">
-        <center>
-        <img src="images/flea logo final.png" width="10%" style="background-color: white;padding: 0% 0% 2%;">
-        <p style="position: absolute; top: 143%; left: 48%; color:black;"><b>Jo-Ri Designs</b></p>
-        <p>Made with Love. © 2023</p>
-        </center>
-    </div>
+     <p style="position: absolute; top: 102%; left: 27%; font-size: 46px;">Click the red dots or the (i) circle to navigate</p>
+	</div>
+     <footer>
+        <p>&copy; 2023 Flea in a Jar</p>
+     </footer>
 </body>
 </html>
