--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Flea In A Jar</title>
+        <meta name="viewport" content="width=device-width, initial-scale = 1.0">
         <style>
             *{
                 font-family: Arial, helvetica;
@@ -67,7 +68,7 @@
                 /* #dat2{padding: 0 0 % 0;} */
                 /* #dat3{padding: 0 0;} */
             #dat3{
-                background-color: teal;
+                background-color: rgba(8,181,198,255);
                 grid-column: auto;
                 grid-row: auto;
                 border: 1px solid black;
