--- a/map.html
+++ b/map.html
@@ -8,6 +8,8 @@
                 display: grid;
                 grid-template: "content";
                 font-family: Arial;
+                overflow-x: hidden;
+                background-color: rgba(8,181,198,255);
             }
             /* #header, #content, #footer{
                 border: 1px solid magenta;
@@ -27,18 +29,27 @@
                     a{
                         text-decoration: none;;
                     }
+                    #mapareas{
+                        text-align: center;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                    }
             /* #content{
                 padding: 20% 0;
             } */
 			
             footer {
+                position: absolute;
+                top: 105%;
+                width: 98.7%;
 				background-color: #333;
 				color: #fff;
 				text-align: center;
 				padding: 12px;
 			}
         </style>
-        <!-- <script src="javascript stuff/image-map-resizer-master/js/imageMapResizer.min.js"></script> -->
+        <script src="javascript stuff/image-map-resizer-master/js/imageMapResizer.min.js"></script>
     </head>
 <body>
     <!-- <div id="header">
@@ -55,23 +66,32 @@
             </ul>
         </div> -->
     <div id="content">
-        <h1 style="position: absolute; top: 8%; left: 5.7%; font-size: 90px; color: #e60000;text-shadow: 2px 2px 4px #000000; ">Map</h1>
-		<p style="position: absolute; top: 23%; left: 6.2%; font-size: 20px; ">blah blah blah</p>
+        <h1 style="position: absolute; top: 8%; left: 5.7%; font-size: 90px; color: #e60000;text-shadow: 2px 2px 4px #000000; z-index: 4;">Map</h1>
+		<p style="position: absolute; top: 23%; left: 6.2%; font-size: 20px; z-index: 4;">
+            Click on the circles to navigate.<br/> 
+            Hover over them to know where your going.<br/> 
+        </p>
         <center>
-        <img src="images/map1stdraft.jpg" usemap="#image_map">
+        <img src="images/map1stdraft.jpg" usemap="#image_map" id="mapareas">
+        <img src="map1stdraft.jpg" usemap="#image_map">
         <map name="image_map">
-        <area alt="" title="Under Construction" href="" coords="1433,399,1511,454" shape="rect">
-        <area alt="" title="Back to Lobby" href="index.html" coords="1148,601,1213,687" shape="rect">
-        <area alt="" title="Under Construction" href="" coords="316,746,391,824" shape="rect">
-        <area alt="" title="Under Construction" href="" coords="1063,980,1140,1042" shape="rect">
-        <area alt="" title="Under Construction" href="" coords="695,1081,757,1138" shape="rect">
-        <area alt="" title="More Info" href="about.html" coords="1438,513,1501,617" shape="rect">
+        <area alt="" title="Home Page" href="index.html" coords="1495,359,1556,404" shape="rect">
+        <area alt="" title="About Us" href="about.html" coords="1372,732,1418,790" shape="rect">
+        <area alt="" title="" href="" coords="617,732,670,778" shape="rect">
+        <area alt="" title="" href="" coords="818,369,871,414" shape="rect">
         </map>
         </center>
-     <p style="position: absolute; top: 102%; left: 27%; font-size: 46px;">Click the red dots or the (i) circle to navigate</p>
 	</div>
      <footer>
         <p>&copy; 2023 Flea in a Jar</p>
      </footer>
+     <script>
+        document.onmousemove = function(){
+            var x = event.screenX * 0.03;
+            var y = event.screenY * 0.03;
+            document.getElementById("mapareas").style.left = -x + "px";
+            document.getElementById("mapareas").style.top = -y + "px";
+        }
+     </script>
 </body>
 </html>
