--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 grid-template: 'dat2';
                 background-image: url('images/headertemp.png');
                 background-attachment: fixed;
-                background-position: 20% 63%;
+                background-position: 20% 52%;
                 background-repeat: no-repeat;
-                background-size: 140% 170%;
-                padding: 7% 0;
+                background-size: 140% 200%;
+                padding: 15% 0;
             }
                 .click{
                     color: white;
@@ -143,7 +143,7 @@
         <hr/>
     </div>
     <div class="header">
-        <div class="click ar2"><p>&gt;</p></div>
+        <div class="click ar2" onclick=""><p>&gt;</p></div>
         <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
             <center>
                 <h1 style="font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a;">Flea in a jar</h1>
@@ -152,8 +152,8 @@
                 <br/>
                 <p style="letter-spacing: 20px; color: #a8030a; font-size: 16px;"><b>TUKMA SOLO EXHIBITION 2023</b></p>
                 <br/>
-                <p style="color: white;">Unleash the jar, Unleash the flea<br/>
-               A reminder to others who are still caught like fleas in a jar</p>
+                <p style="color: rgb(255, 255, 255);"><strong>Unleash the jar, Unleash the flea<br/>
+               A reminder to others who are still caught like fleas in a jar</strong></p>
             </center>
             <div style="text-align: center;">
                 <span class="dots"></span>
@@ -203,5 +203,9 @@
             <a href="contacts.html" style="text-decoration: none; color: black;">Contact Us!</a>
         </p>
     </div>
+
+    <script>
+        
+    </script>
 </body>
 </html>
