--- a/minigames/paranoia.html
+++ b/minigames/paranoia.html
@@ -3,6 +3,7 @@
     <head>
         <title>Flea In A Jar</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             #mainarea{
                 margin: auto;
@@ -12,11 +13,14 @@
                 top: 0;
                 left: 0;
                 width: 99%;
+                 height: 98%;
             }
         </style>
     </head>
 <body>
     <canvas id="mainarea"></canvas>
-    <script src="jsparanoid.js"></script>
+    <script src="jsparanoid.js">
+        
+    </script>
 </body>
 </html>
