--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 /* #dat2{padding: 0 0 % 0;} */
                 /* #dat3{padding: 0 0;} */
             #dat3{
-                background-color: rgba(8,181,198,255);
+                background-color: rgba(0,0,0,0);
                 grid-column: auto;
                 grid-row: auto;
                 border: 1px solid black;
@@ -77,6 +77,7 @@
                 top: 0;
                 z-index: 2;
                 height: 100%;
+                transition: 0.3s;
             }
                 #dat3 hr{
                     width: 20%;
@@ -90,6 +91,9 @@
                     #dat3 p:hover{
                         background-color: gray;
                     }
+            html:not([data-scroll='0']) #dat3{
+				background-color: rgb(8,181,198,25);
+			}
                 /* .menu{
                     margin: 0 -30%;
                 }
@@ -152,7 +156,7 @@
                 <br/>
                 <p style="letter-spacing: 20px; color: #a8030a; font-size: 16px;"><b>TUKMA SOLO EXHIBITION 2023</b></p>
                 <br/>
-                <p style="color: rgb(255, 255, 255);"><strong>Unleash the jar, Unleash the flea<br/>
+                <p style="color: rgb(0,0,0);"><strong>Unleash the jar, Unleash the flea<br/>
                A reminder to others who are still caught like fleas in a jar</strong></p>
             </center>
             <div style="text-align: center;">
@@ -205,7 +209,24 @@
     </div>
 
     <script>
-        
+        const debounce = (fn) => {
+			let frame;
+			return (...params) => {
+				if (frame){
+					cancelAnimationFrame(frame);
+				}
+
+				frame = requestAnimationFrame(() => {
+					fn(...params);
+				});
+			}
+		};
+
+		const storeScroll = () => {
+			document.documentElement.dataset.scroll = window.scrollY;
+		}
+		document.addEventListener('scroll', debounce(storeScroll), {passive: true});
+		storeScroll();
     </script>
 </body>
 </html>
