--- a/index.html
+++ b/index.html
@@ -17,21 +17,25 @@
                 z-index: 2;
             }
             .header {
-                grid-column: 2;
+                grid-column: 1 / span 2;
                 display: grid;
                 grid-template: 'dat2';
                 background-image: url('images/headertemp.png');
                 background-attachment: fixed;
-                background-position: 20% 52%;
+                background-position: 40%;
                 background-repeat: no-repeat;
                 background-size: 140% 200%;
                 padding: 15% 0;
             }
+                #overlay{
+                    width: 100%;
+                    height: 100%;
+                    
+                }
                 .click{
                     color: white;
                     font-size: 50px;
                     position: absolute;
-                    transition: text-shadow 0.3s;
                 }
                     .ar1{
                         top: 40%;
@@ -41,10 +45,10 @@
                         top: 40%;
                         right: 5%;
                     }
-                    .click:hover{
+                    /* .click:hover{
                         cursor:pointer;
                         text-shadow: 0 0 5px gray;
-                    }
+                    } */
                 #dat1, #dat2, #dat3{
                     margin: 0px;
                     /* border: 1px solid palevioletred; */
@@ -71,21 +75,24 @@
                 background-color: rgba(0,0,0,0);
                 grid-column: auto;
                 grid-row: auto;
-                border: 1px solid black;
                 display: block;
                 position: fixed;
                 top: 0;
-                z-index: 2;
+                z-index: 5;
                 height: 100%;
-                transition: 0.3s;
+                width: 15%;
+                line-height: 50px;
+                transition: 0.2s;
+                color: white;
             }
                 #dat3 hr{
-                    width: 20%;
-                    margin: 0 4%;
+                    width: 80%;
+                    margin: 0 10%;
                     border: 1px solid black;
                 }
                 #dat3 p{
-                    padding: 5% 11%;
+                    padding: 10% 35%;
+                    text-align: center;
                     transition: 0.3s;
                 }
                     #dat3 p:hover{
@@ -93,6 +100,7 @@
                     }
             html:not([data-scroll='0']) #dat3{
 				background-color: rgb(8,181,198,25);
+                color: black
 			}
                 /* .menu{
                     margin: 0 -30%;
@@ -138,7 +146,7 @@
     </head>
 <body>
     <div id="dat3">
-        <img src="images/flea logo final.png" width="20%" style="padding: 3%;">
+        <img src="images/flea logo final.png" width="80%" style="padding: 3% 10%;">
         <p>HOME</p>
         <hr/>
         <span style="display: block;" onclick="location.href='about.html'" onmouseover="this.style.cursor = 'pointer'"><p style="margin: 0 -0.5%;">ABOUT</p></span>
@@ -147,24 +155,27 @@
         <hr/>
     </div>
     <div class="header">
-        <div class="click ar2" onclick=""><p>&gt;</p></div>
-        <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
-            <center>
-                <h1 style="font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a;">Flea in a jar</h1>
+            <div class="click ar2"><p>&gt;</p></div>
+            <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
+                <center>
+                    <h1 style="font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a;">Flea in a jar</h1>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <p style="letter-spacing: 20px; color: #a8030a; font-size: 16px;"><b>TUKMA SOLO EXHIBITION 2023</b></p>
+                    <br/>
+                    <p style="color: rgb(0,0,0);"><strong>Unleash the jar, Unleash the flea<br/>
+                A reminder to others who are still caught like fleas in a jar</strong></p>
+                </center>
                 <br/>
                 <br/>
                 <br/>
-                <p style="letter-spacing: 20px; color: #a8030a; font-size: 16px;"><b>TUKMA SOLO EXHIBITION 2023</b></p>
-                <br/>
-                <p style="color: rgb(0,0,0);"><strong>Unleash the jar, Unleash the flea<br/>
-               A reminder to others who are still caught like fleas in a jar</strong></p>
-            </center>
+            </div>
             <div style="text-align: center;">
                 <span class="dots"></span>
                 <span class="dots"></span>
                 <span class="dots"></span>
             </div>
-        </div>
     </div>
     <div class="content">
         <div class="image">
@@ -227,6 +238,29 @@
 		}
 		document.addEventListener('scroll', debounce(storeScroll), {passive: true});
 		storeScroll();
+
+        const dataheader = document.getElementById("dat2");
+        const arrowRight = document.getElementsByClassName("ar2")[0];
+
+        arrowRight.style.transition = "0.3";
+
+        arrowRight.onmouseover = function(){
+            dataheader.style.opacity = "0.0";
+            arrowRight.style.cursor = "pointer";
+        }
+        arrowRight.onmouseout = function(){
+            animationlooptest(dataheader);
+            dataheader.style.opacity = "1.0";
+        }
+
+        function animationlooptest(dataid){
+            for(var i = 0; i < 1; i += 0.1){
+                dataid.style.opacity = i + "";
+            }
+        }
+        // function headertest(){
+        //     const target = document.getElementById("dat2");
+        // }
     </script>
 </body>
 </html>
