--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
                 <img src="images/30.png" class="paint" >
                 <img src="images/27.png" class="paint">
                 <img src="images/28.png" class="paint">
-                <img src="images/headertemp.png" style="grid-column: 1 / span 2;" onload="style='width: 175%;'" onmouseover="style='transition: 0.5s; width: 189%;'" onmouseout="style='transition: 0.5s; width: 177%;'">
+                <img src="images/headertemp.png" class="paint" style="grid-column: 1 / span 2;" onload="style='width: 175%;'" onmouseover="style='transition: 0.5s; width: 189%;'" onmouseout="style='transition: 0.5s; width: 177%;'">
                 <img src="images/25.png" class="last">
             </div>
         </div>
@@ -322,11 +322,37 @@
         </table>
     </div>
     <div class="modal">
-        <table class="detailedPaint" style="background-image: url('images/print\ 3\ bg.png'); background-size: contain;">
+        <table class="detailedPaint" style="background-image: url('images/print\ 1\ bg.png'); background-size: contain;">
             <tr>
-                <td style="text-align: center;"><img src="images/29.png" width="110%"/></td>
+                <td style="text-align: center;"><img src="images/27.png" width="110%"/></td>
                 <td class="text-area">
-                    <h1>Bipolar</h1>
+                    <h1>Paranoia</h1>
+                    <br/>
+                    <hr style="text-align: left; margin: 0 0 0 3%; width: 30%; border: 1px solid white;"/>
+                    <br/>
+                    <p>
+                        It was a pretty cool day that time. I was walking down the college when I looked at the room at my left. There were students that were playing there. Curious, I entered it, and 
+                    found myself in the Leaderboard competition. There were people playing OSU, Flappy Bird, and even Minesweeper. Due to the fact, that most of the places were being filled in by 
+                    various people, I decided to go to the computers with OSU! turned on. Weird thing is that not most people are playing it, other than the games that were really common to them, 
+                    and somewhat boring to watch (basing on my own opinion). Even weirder thing is that I dont even know how to play OSU! in the first place. All I could think about was having fun 
+                    that day. So, I went to one of the computers, and played the tutorial. With the help of my tablet displaying the helpful guide on how to beat OSU! levels (called beatmaps), I 
+                    headed on to the main event. Like many others who just started playing a game, I played onto the easiest level in the game. Though there were lots of things happening on screen 
+                    at once, I was able to pull off my rhythmic gamer attitude and got through it.<br/>
+                    <br/>After continuous gaming, I gained some confidence in playing harder versions of the levels(mostly normal mode). Man, they definitely kicked my ass, but at least they definitely 
+                    taught me that knowing every nook and cranny of every song will help you to survive each level, well except for several songs that are considered unpredictable and noise-like. 
+                    After an hour of playing them, I wrote my name, my accuracy, and my score on a piece of paper dedicated to those who played OSU!, thinking that its for the attendance of the 
+                    Leaderboard event. Then, I left in a haste towards my house as it was already lunch time.
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="modal">
+        <table class="detailedPaint" style="background-image: url('images/print\ 2\ bg.png'); background-size: contain;">
+            <tr>
+                <td style="text-align: center;"><img src="images/28.png" width="110%"/></td>
+                <td class="text-area">
+                    <h1>Blank</h1>
                     <br/>
                     <hr style="text-align: left; margin: 0 0 0 3%; width: 30%; border: 1px solid white;"/>
                     <br/>
@@ -352,33 +378,7 @@
             <tr>
                 <td style="text-align: center;"><img src="images/29.png" width="110%"/></td>
                 <td class="text-area">
-                    <h1>Bipolar</h1>
-                    <br/>
-                    <hr style="text-align: left; margin: 0 0 0 3%; width: 30%; border: 1px solid white;"/>
-                    <br/>
-                    <p>
-                        It was a pretty cool day that time. I was walking down the college when I looked at the room at my left. There were students that were playing there. Curious, I entered it, and 
-                    found myself in the Leaderboard competition. There were people playing OSU, Flappy Bird, and even Minesweeper. Due to the fact, that most of the places were being filled in by 
-                    various people, I decided to go to the computers with OSU! turned on. Weird thing is that not most people are playing it, other than the games that were really common to them, 
-                    and somewhat boring to watch (basing on my own opinion). Even weirder thing is that I dont even know how to play OSU! in the first place. All I could think about was having fun 
-                    that day. So, I went to one of the computers, and played the tutorial. With the help of my tablet displaying the helpful guide on how to beat OSU! levels (called beatmaps), I 
-                    headed on to the main event. Like many others who just started playing a game, I played onto the easiest level in the game. Though there were lots of things happening on screen 
-                    at once, I was able to pull off my rhythmic gamer attitude and got through it.<br/>
-                    <br/>After continuous gaming, I gained some confidence in playing harder versions of the levels(mostly normal mode). Man, they definitely kicked my ass, but at least they definitely 
-                    taught me that knowing every nook and cranny of every song will help you to survive each level, well except for several songs that are considered unpredictable and noise-like. 
-                    After an hour of playing them, I wrote my name, my accuracy, and my score on a piece of paper dedicated to those who played OSU!, thinking that its for the attendance of the 
-                    Leaderboard event. Then, I left in a haste towards my house as it was already lunch time.
-                    </p>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div class="modal">
-        <table class="detailedPaint" style="background-image: url('images/print\ 3\ bg.png'); background-size: contain;">
-            <tr>
-                <td style="text-align: center;"><img src="images/29.png" width="110%"/></td>
-                <td class="text-area">
-                    <h1>Bipolar</h1>
+                    <h1>Who I Am</h1>
                     <br/>
                     <hr style="text-align: left; margin: 0 0 0 3%; width: 30%; border: 1px solid white;"/>
                     <br/>
