--- a/map.html
+++ b/map.html
@@ -72,8 +72,8 @@
             Hover over them to know where your going.<br/> 
         </p>
         <center>
-        <img src="images/map1stdraft.jpg" usemap="#image_map" id="mapareas">
-        <img src="map1stdraft.jpg" usemap="#image_map">
+        <img src="images/map2nddraft.jpg" usemap="#image_map" id="mapareas">
+        <img src="map2nddraft.jpg" usemap="#image_map">
         <map name="image_map">
         <area alt="" title="Home Page" href="index.html" coords="1495,359,1556,404" shape="rect">
         <area alt="" title="About Us" href="about.html" coords="1372,732,1418,790" shape="rect">
