--- a/minigames/paranoia.html
+++ b/minigames/paranoia.html
@@ -15,12 +15,19 @@
                 width: 99%;
                  height: 98%;
             }
+            #objPlayer, #objBackground, #darkness{
+                display: none;
+            }
+            #darkness{
+                background-color: rgb(0,0,0);
+            }
         </style>
     </head>
 <body>
     <canvas id="mainarea"></canvas>
-    <script src="jsparanoid.js">
-        
-    </script>
+    <img id="objPlayer" src="../images/playersmallercropped.png">
+    <img id="objBackground" src="../images/gamebg.jpg">
+    <div id="darkness">
+    <script src="jsparanoid.js"></script>
 </body>
 </html>
