--- a/about.html
+++ b/about.html
@@ -42,10 +42,11 @@
                 .lowersect #contact{
                     padding: 10% 20%;
                     text-align: center;
+                    color: white;
                     transition: 0.3s;
                 }
                     .lowersect p:hover{
-                        background-color:#F2ECEB;
+                        background-color:#6a3d36;
                     }
                     /* .menu{
                         list-style-type: none;
@@ -103,7 +104,7 @@
                     grid-column: 2;
                     grid-row: 4;
                     padding: 3% 0;
-                    background-image: url('images/print  bg.png');
+                    background-image: url('images/print 1 bg.png');
                     background-size: 100% 150%;
                     background-attachment: fixed;
                     text-align: center;
@@ -194,9 +195,9 @@
         <img src="images/flea logo final.png" width="80%" style="padding: 3% 10%;">
         <span style="display: block;" onclick="location.href='index.html'" onmouseover="this.style.cursor = 'pointer'"><p style=" color: white">HOME</p></span>
         <hr/>
-        <span style="display: block;" onclick="location.href=' '" onmouseover="this.style.cursor = 'pointer'"><p style="margin: 0 -0.5%; background-color: #6a3d36; color: white" >ABOUT</p></span>
+        <span style="display: block;" onclick="location.href=' '" onmouseover="this.style.cursor = 'pointer'"><p style="margin: 0 -0.5%; background-color: #F2ECEB; color: black;" >ABOUT</p></span>
         <hr/>
-        <span style="display: block;" onclick="location.href='map.html'" onmouseover="this.style.cursor = 'pointer'"><p style=" color: white">MAP</p></span>
+        <span style="display: block;" onclick="location.href='index.html'" onmouseover="this.style.cursor = 'pointer'"><p style=" color: white">MAP</p></span>
         <hr/>
         <span style="display: block;" onclick="location.href='contacts.html'" onmouseover="this.style.cursor = 'pointer'"><p id="contact">Contact US!</p></span>
         <hr/>
@@ -265,11 +266,12 @@
         <div id="overlay">
             <br/>
            <h1 style="font-size:50px; color: white "><br>ARTWORKS</h1>
+           <hr style="width: 40%; border: 2px solid white; margin: auto;"/>
             <center>
-               <p style="color: white;font-size: 20px "><br><br>The exhibit showcases digital illustrations portraying a character navigating various
-			   common mental health experiences<br>prevalent in today's generation. Accompanying these illustrations is a large mixed-media painting.
-			   The installation, serving as<br>the final piece, invites everyone to participate by affixing stickers to the wall. The use of light to
-			   dark hues that symbolizes the range<br>of individuals emotions. A tool, fostering connection among people through a dialogue of moods.
+               <p style="color: white; font-size: 20px; margin: 5%;">The exhibit showcases digital illustrations portraying a character navigating various
+			   common mental health experiences prevalent in today's generation. Accompanying these illustrations is a large mixed-media painting.
+			   The installation, serving as the final piece, invites everyone to participate by affixing stickers to the wall. The use of light to
+			   dark hues that symbolizes the range of individuals emotions. A tool, fostering connection among people through a dialogue of moods.
 			   </p>
             </center>
             <div class="artworkcontent">
@@ -336,9 +338,8 @@
                 <td class="text-area">
                     <h1>Paranoia</h1>
                     <br/>
-                    <
                     <br/>
-                    <p style="color= white">
+                    <p style="color: white">
                     Imagine a delicate web spun in the recesses of the mind, where shadows morph into lurking doubts and whispers become conspiracies. 
 					Paranoia, a symphony of anxious whispers, is like a dense fog that distorts the clarity of thought, turning everyday interactions
 					into a maze of hidden meanings and veiled threats. It's as if the mind wears tinted glasses, coloring reality with hues of suspicion
