--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 				background-color: #303240;
                 color: white
 			}
+            html:not([data-scroll='0']) #dat3 .currentPage{
+                color: black;
+			}
                 /* .menu{
                     margin: 0 -30%;
                 }
