--- a/map.html
+++ b/map.html
@@ -96,7 +96,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="minigames/paranoia.html" class="games">
+                    <a href="minigames/paranoia.html" class="games" target="_blank">
                         <img src="images/print 1.png" width="50%" style="position: relative;">
                     </a>
                     <p id="instruct1">
