--- a/about.html
+++ b/about.html
@@ -7,15 +7,18 @@
                 margin: 0;
                 font-family: Arial, Helvetica, sans-serif;
             }
+            *::before, *::after{
+                box-sizing: border-box;
+            }
             body{
                 display: grid;
                 grid-template-columns: 15% auto;
                 grid-template-rows: auto auto auto auto "footer";
                 background-image: url('images/sticker bg.png');
                 background-attachment: fixed;
+                overflow-x: hidden;
             }
             #header, #content, #footer{
-                /* border: 1px solid magenta; */
                 z-index: 3;
             }
                 .lowersect{
@@ -28,6 +31,7 @@
                     height: 100%;
                     width: 15%;
                     line-height: 50px;
+                    z-index: 3;
                 }
                 .lowersect hr{
                     width: 80%;
@@ -48,33 +52,40 @@
                     .lowersect p:hover{
                         background-color:#6a3d36;
                     }
-                    /* .menu{
-                        list-style-type: none;
-                        margin: 0 -30%;
-                    }
-                    .menu li{
-                        float: left;
-                        transition: 0.3s;
-                    }
-                        .menu li, .menu a{
-                            padding: 100px 20.5%;
-                        }
-                        li:hover{
-                            background-color: gray;
-                        } */
                 #header{
                     grid-column: 2;
                 }
                 .headers{
+                    position: absolute;
+                    width: 90vw;
+                    background-color: rgb(0,0,0,0.3);
                     padding: 25% 0;
-                    background-image: url("images/testign.gif");
-                    background-repeat: no-repeat;
-                    background-attachment: fixed;
-                    background-size: cover;
+                    z-index: 2;
                 }
-                #headers{
-                    grid-column: 2;
+                .carousel{
+                    width: 100%;
+                    height: 90vh;
+                    position: relative;
                 }
+                .carousel > ul{
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                }
+                .slide{
+                    position: absolute;
+                    inset: 0;
+                    opacity: 0;
+                }
+                    .slide[data-active]{
+                        opacity: 1;
+                        z-index: 1;
+                    }
+                    .slide > img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                     li{
                         float: right;
                         margin: 0 10px;
@@ -94,7 +105,6 @@
                 .aboutexhibition{
                     grid-column: 2;
                     grid-row: 3;
-                    /* padding: 13% 0; */
                     background-attachment: fixed;
                 }
                 #overlay{
@@ -133,15 +143,15 @@
                             .paint:hover, .last:hover{
                                 width: 86%;
                             }
+                            .modal tr{
+                                background-color: rgb(0,0,0,0.4);
+                            }
             #footer{
                 grid-column: 2;
                 grid-row: 5;
                 padding: 5% 0;
                 background-color: white;
             }
-            /* table, td{
-                border: groove 3px grey;
-            } */
             .modal {
                 display: none;
                 position: fixed;
@@ -180,7 +190,7 @@
                     width: 80ch;
                     padding: 15% 5%;
                     overflow-y: scroll;
-                    color: black;
+                    color: white;
                     /* background-color: rgb(0, 0, 0, 0.4); */
                 }
                 @keyframes paintings {
@@ -203,11 +213,23 @@
         <hr/>
     </div>
     <div id="header" style="background-color: white;">
-        <div class="headers">
-            <p style="text-align: center; font-size: 100px; color: white;">
-                <b>ABOUT</b>
-            </p>
-        </div>
+        <section class="slideContainer">
+            <div class="carousel">
+                <div class="headers">
+                    <p style="text-align: center; font-size: 100px; color: white;">
+                        <b>ABOUT</b>
+                    </p>
+                </div>
+                <ul data-slides>
+                    <li class="slide" data-active>
+                        <img src="images/print 1.png" alt="Paranoia">
+                    </li>
+                    <li class="slide">
+                        <img src="images/print 2.png" alt="Paranoia">
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
     <div id="content" style="background-image: url('images/papertexturecutout.png');">
         <h1 style="text-align: center;"> WHO ARE WE? </h1>
@@ -299,7 +321,6 @@
                 <td class="text-area">
                     <h1>Bipolar</h1>
                     <br/>
-               
                     <br/>
                     <p>
                        Sometimes the sun shines brightly, and you feel on top of the world, wind rushing through your hair.
@@ -318,7 +339,6 @@
                 <td class="text-area">
                     <h1>Anxiety</h1>
                     <br/>
-                   
                     <br/>
                     <p>
                        It's that knot in your stomach, a tightly wound ball of yarn that threatens to unravel at the slightest provocation.
@@ -372,11 +392,13 @@
     <div class="modal">
         <table class="detailedPaint" style="background-image: url('images/slide2.png'); background-size: contain;">
             <tr>
-                <td style="text-align: center;"><img src="images/266.png" width="110%"/></td>
-                <td class="text-area">
+                <td style="text-align: center;"><img src="images/headertemp.png" width="40%"/></td>
+            </tr>
+            <tr>
+                <td style="padding: 5% 15%; text-align: center; color: white;">
                     <h1>Who Am I</h1>
                     <br/>
-                    <hr style="text-align: left; margin: 0 0 0 3%; width: 30%; border: 1px solid white;"/>
+                    <hr style="margin-left: 24%; width: 50%; border: 1px solid white;"/>
                     <br/>
                     <p>
                         A state where your mind puts up a barrier, making you feel disconnected from your thoughts, feelings, or surroundings. 
@@ -421,6 +443,22 @@
             modal.style.display = "none";
         }
         };
+
+        slideshow();
+        function slideshow(){
+            const carousel = document.getElementsByClassName("carousel")[0];
+            const slides = carousel.querySelector("data-slides");
+            const activeSlide = slides.querySelector("[data-active]");
+            let newIndex = [...slides.children].indexOf("activeSlide");
+            newIndex++;
+
+            // if (newIndex < 0) newIndex = slides.children.length - 1;
+            if (newIndex >= slides.children.length) newIndex = 0;
+            slides.children[newIndex].dataset.active = true;
+            delete activeSlide.dataset.active;
+
+            setTimeout(slideshow, 2000);
+        }
     </script>
 </body>
 </html>
