--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
                     filter: drop-shadow(0 5px 7px black);
                 }
                 .text{
-               
                     padding: 5% 0%;
                 }
              .footer {
@@ -183,7 +182,8 @@
         /* Animations */
         .fade {
             animation-name: fade;
-            animation-duration: 1.5s;
+            animation-duration: 0.5s;
+            /* animation-delay: 200ms; */
         }
 
         @keyframes fade {
@@ -206,7 +206,7 @@
     </div>
     <span class="click ar2">&#10095;</span>
     <div class="slideContainer">
-        <div class="slide fade headerimg">
+        <div class="slide fade headerimg" data-active>
             <img src="images/slide1.jpg" width="120%">
         </div>
         <div class="slide fade paranoia">
@@ -339,6 +339,8 @@
         function showSlides() {
         let i;
         let slides = document.getElementsByClassName("slide");
+        let activeSlide = document.querySelector("[data-active]");
+        // const activeSlide = slides.querySelectorAll("[data-active]");
         for (i = 0; i < slides.length; i++) {
             slides[i].style.display = "none";
         }
